# fillit

./: .create_tetrimino.c.swp  .w_count.c.swp  CMakeLists.txt  ConsoleApplication1.c  Makefile  Validate.c  a.out  check_figure.c  create_list.c  create_tetrimino.c  field.c  field.h  field.h.gch  fillit  find_solution.c  find_solution.h  find_solution.h.gch  ft_list.h  h_count.c  main.c  tetr_list.h  tetr_list.h.gch  tetromino.c  tetromino.h  tetromino.h.gch  text.txt  validation.c  validation.h  validation.h.gch  w_count.c  w_h_counter.c  сheck_file.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
fillit/: Makefile  create_list.c  tetromino.c  tetromino.h  validation.h
libft/: Makefile  libft.h.gch
